<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileView">

    <!-- Rectangle 9 -->

    <ImageView
      android:id="@+id/profile_avatar"
      android:layout_width="154dp"
      android:layout_height="151dp"
      android:layout_marginStart="128dp"
      android:layout_marginTop="100dp"
      android:clickable="false"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:src="@android:drawable/sym_def_app_icon"/>

    <EditText
        android:id="@+id/profile_view_tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:enabled="false"
        android:text="Akshay Gupta"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/profile_avatar"
        app:layout_constraintStart_toStartOf="@+id/profile_avatar"
        app:layout_constraintTop_toBottomOf="@id/profile_avatar" />

    <TextView
        android:id="@+id/profile_gender_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/profile_view_tv_name"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/gender"
        android:textColor="@android:color/black"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/profile_gender_val_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:text="Male"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="@id/profile_gender_tv"
        app:layout_constraintBottom_toBottomOf="@id/profile_gender_tv"
        app:layout_constraintStart_toStartOf="@id/profile_gender_tv"/>



    <TextView
        android:id="@+id/profile_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/profile_gender_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/emailid"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/profile_email_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:enabled="false"
        android:inputType="textEmailAddress"
        android:text="abc@def.com"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@id/profile_email_tv"
        app:layout_constraintStart_toStartOf="@id/profile_email_tv"
        app:layout_constraintTop_toTopOf="@id/profile_email_tv" />

    <RadioGroup
        android:id="@+id/profile_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:text="abc@def.com"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@id/profile_gender_tv"
        app:layout_constraintStart_toStartOf="@id/profile_gender_tv"
        app:layout_constraintTop_toTopOf="@id/profile_gender_tv">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="21sp"/>

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:text="@string/female" />
    </RadioGroup>

    <Button
        android:id="@+id/profile_edit_button"
        android:layout_width="53dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit"
        tools:layout_editor_absoluteX="333dp"
        tools:layout_editor_absoluteY="36dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="32dp"
        android:text="@string/sign_out"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/profile_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save_changes"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/sign_out_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"/>



</androidx.constraintlayout.widget.ConstraintLayout>