<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen">

    <!-- Rectangle 6 -->
    <View
        android:id="@+id/rectangle_9"
        android:layout_width="411dp"
        android:layout_height="233dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rectangle_6"
        />

    <!-- Hi -->
    <TextView
        android:id="@+id/hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="33dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="467dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="39dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1320dp"
        android:text="@string/hi"
        android:textSize="30sp"
        android:textAppearance="@style/hi"
        android:lineSpacingExtra="9sp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!-- Akshay -->
    <TextView
        android:id="@+id/home_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="33dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="467dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1227dp"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:letterSpacing="0.05"
        android:lineSpacingExtra="9sp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/profileicon"
        android:layout_width="56dp"
        android:layout_height="58dp"

        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_marginRight="33dp"
        android:background="@drawable/round_account_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Rectangle 10 -->
    <View
        android:id="@+id/rectangle_1"
        android:layout_width="348dp"
        android:layout_height="34dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="23dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="146dp"
        android:background="@drawable/rectangle_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!-- Search Trips -->
    <EditText
        android:id="@+id/search_trip"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="43dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="156dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/search_trip"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:gravity="top"
        />

    <Button
        android:id="@+id/vector"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="327dp"
        android:layout_marginTop="152dp"
        android:background="@drawable/ic_vector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/discover_tr"
        android:layout_width="114dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="23dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="197dp"
        android:text="@string/discover_tr"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="top"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hpme_screen_discover_recyvler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_9" />


</androidx.constraintlayout.widget.ConstraintLayout>